--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "@types/react-dom": "^17.0.6",
     "babel-loader": "^8.2.2",
     "husky": "^4.3.8",
+    "postcss": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "size-limit": "^4.9.1",
+    "tailwindcss": "^2.1.4",
     "ts-toolbelt": "9.6.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
