--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "@storybook/react": "^6.1.21",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "antd": "^4.16.2",
     "babel-loader": "^8.2.2",
+    "classnames": "^2.3.1",
     "husky": "^4.3.8",
     "postcss": "^8.3.1",
     "react": "^17.0.2",
