--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "ts-toolbelt": "9.6.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "typescript": "4.3.2"
   },
   "dependencies": {
     "@types/lodash": "^4.14.170",
