--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mesh",
+  "name": "vertical",
   "version": "0.1.0",
   "license": "MIT",
   "main": "dist/index.js",
@@ -66,7 +66,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.170",
-    "fp-ts": "^2.10.5",
+    "fp-ts": "^2.11.0-rc.2",
     "io-ts": "^2.2.16",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
