--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@daniely/vertical",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -57,7 +57,6 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "size-limit": "^4.9.1",
-    "ts-toolbelt": "9.6.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "4.3.2"
@@ -69,7 +68,8 @@
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
-    "type-fest": "0.21.3"
+    "type-fest": "1.2.0",
+    "ts-toolbelt": "9.6.0"
   },
   "description": "Vertical Abstract Software",
   "directories": {
