--- a/package.json
+++ b/package.json
@@ -52,14 +52,14 @@
     "babel-loader": "^8.2.2",
     "classnames": "^2.3.1",
     "husky": "^4.3.8",
-    "postcss": "^8.3.4",
+    "postcss": "^8.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "size-limit": "^4.9.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
-    "typescript": "4.3.2"
+    "typescript": "4.3.3"
   },
   "dependencies": {
     "@types/lodash": "^4.14.170",
@@ -68,8 +68,8 @@
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
-    "type-fest": "1.2.0",
-    "ts-toolbelt": "9.6.0"
+    "ts-toolbelt": "9.6.0",
+    "type-fest": "1.2.1"
   },
   "description": "Vertical Abstract Software",
   "directories": {
