--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@daniely/vertical",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -62,12 +62,13 @@
     "typescript": "4.3.5"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.170",
+    "@types/lodash": "^4.14.171",
     "fp-ts": "^2.11.0-rc.2",
     "io-ts": "^2.2.16",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
+    "nanoid": "^3.1.23",
     "ts-toolbelt": "9.6.0",
     "type-fest": "1.2.1"
   },
