storybook-builder-vite

--- a/package.json
+++ b/package.json
@@ -53,10 +53,6 @@
   },
   "author": "Daniel Yogel",
   "devDependencies": {
-    "antd": "^4.16.13",
-    "classnames": "^2.3.1",
-    "postcss": "^8.3.11",
-    "tsdx": "^0.14.1",
     "@babel/core": "^7.17.5",
     "@size-limit/preset-small-lib": "^7.0.8",
     "@storybook/addon-essentials": "^6.4.19",
@@ -66,28 +62,34 @@
     "@storybook/react": "^6.4.19",
     "@tsconfig/create-react-app": "^1.0.2",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/react": "^17.0.39",
+    "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "antd": "^4.16.13",
     "babel-loader": "^8.2.3",
+    "classnames": "^2.3.1",
     "dts-cli": "^1.4.0",
     "husky": "^7.0.4",
+    "postcss": "^8.3.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "size-limit": "^7.0.8",
+    "storybook-builder-vite": "^0.1.19",
+    "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6"
   },
   "dependencies": {
     "@types/lodash": "^4.14.176",
-    "fp-ts": "2.11.5",
+    "fp-ts": "2.11.9",
     "io-ts": "^2.2.16",
     "lodash": "^4.17.21",
     "mobx": "^6.3.6",
     "mobx-react-lite": "^3.2.2",
     "nanoid": "^3.1.30",
     "ts-toolbelt": "9.6.0",
-    "type-fest": "2.1.0"
+    "type-fest": "2.12.0"
   },
   "description": "Vertical Abstract Software",
   "directories": {
