--- a/package.json
+++ b/package.json
@@ -1,49 +1,34 @@
 {
   "name": "@daniely/vertical",
-  "version": "0.7.9",
+  "description": "Vertical Abstract Software",
+  "author": "Daniel Yogel",
+  "version": "0.8.0",
   "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/mylib.esm.js",
+  "main": "./dist/vertical.umd.js",
+  "module": "./dist/vertical.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/vertical.es.js",
+      "require": "./dist/vertical.umd.js"
+    }
+  },
   "typings": "dist/index.d.ts",
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
-    "analyze": "size-limit --why",
-    "build": "dts build",
-    "build-storybook": "build-storybook",
-    "lint": "dts lint",
-    "prepare": "dts build",
-    "size": "size-limit",
-    "start": "dts watch",
+    "dev": "concurrently --raw \"vite\" \"tsc --noEmit --watch\" \"npm run storybook\"",
+    "build": "concurrently --raw \"vite build\" \"npm run build:types\"",
+    "build:types": "tsc --declaration --emitDeclarationOnly --outDir dist",
+    "typecheck": "tsc --noEmit",
+    "prepare": "npm run build",
     "storybook": "start-storybook -p 6006",
-    "test": "dts test --passWithNoTests"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "dts lint"
-    }
-  },
-  "jest": {
-    "testEnvironment": "jsdom"
-  },
-  "peerDependencies": {
-    "react": ">=16"
+    "build-storybook": "build-storybook"
   },
   "engines": {
     "node": ">=12"
   },
-  "size-limit": [
-    {
-      "path": "dist/mylib.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/mylib.esm.js",
-      "limit": "10 KB"
-    }
-  ],
   "prettier": {
     "printWidth": 150,
     "semi": true,
@@ -51,49 +36,38 @@
     "trailingComma": "none",
     "arrowParens": "avoid"
   },
-  "author": "Daniel Yogel",
+  "peerDependencies": {
+    "react": ">=16",
+    "mobx": "^6.0.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@size-limit/preset-small-lib": "^7.0.8",
     "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.4.19",
     "@storybook/addons": "^6.4.19",
     "@storybook/react": "^6.4.19",
-    "@tsconfig/create-react-app": "^1.0.2",
-    "@tsconfig/recommended": "^1.0.1",
+    "storybook-builder-vite": "^0.1.19",
+    "@types/lodash": "^4.14.176",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "antd": "^4.16.13",
-    "babel-loader": "^8.2.3",
     "classnames": "^2.3.1",
-    "dts-cli": "^1.4.0",
-    "husky": "^7.0.4",
     "postcss": "^8.3.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "size-limit": "^7.0.8",
-    "storybook-builder-vite": "^0.1.19",
-    "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2",
-    "vite": "^2.8.6"
+    "vite": "^2.8.6",
+    "ts-toolbelt": "9.6.0",
+    "type-fest": "2.12.0",
+    "concurrently": "7.0.0"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.176",
     "fp-ts": "2.11.9",
     "io-ts": "^2.2.16",
     "lodash": "^4.17.21",
     "mobx": "^6.3.6",
     "mobx-react-lite": "^3.2.2",
-    "nanoid": "^3.1.30",
-    "ts-toolbelt": "9.6.0",
-    "type-fest": "2.12.0"
-  },
-  "description": "Vertical Abstract Software",
-  "directories": {
-    "test": "test"
+    "nanoid": "^3.1.30"
   },
   "repository": {
     "type": "git",
