--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "importHelpers": true,
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
