--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "lodash": "^4.17.21",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "tsd": "^0.20.0"
   },
   "repository": {
     "type": "git",
