--- a/package.json
+++ b/package.json
@@ -38,37 +38,36 @@
     "arrowParens": "avoid"
   },
   "peerDependencies": {
-    "mobx": "^6.6.0",
     "react": ">=16"
   },
   "devDependencies": {
-    "@ladle/react": "^0.16.0",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.36",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "antd": "^4.20.6",
-    "classnames": "^2.3.1",
-    "concurrently": "7.2.1",
-    "postcss": "^8.4.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-is": "^17.0.2",
+    "@ladle/react": "^2.12.3",
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^18.16.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "antd": "^5.4.6",
+    "classnames": "^2.3.2",
+    "concurrently": "^8.0.1",
+    "postcss": "^8.4.23",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "ts-toolbelt": "9.6.0",
-    "tslib": "^2.4.0",
-    "type-fest": "2.13.0",
-    "typescript": "^4.7.2",
-    "vite": "^2.9.9",
-    "vitest": "^0.12.10"
+    "tslib": "^2.5.0",
+    "type-fest": "^3.9.0",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.4",
+    "vitest": "^0.30.1"
   },
   "dependencies": {
-    "fp-ts": "2.12.1",
-    "io-ts": "^2.2.16",
+    "fp-ts": "^2.14.0",
+    "io-ts": "^2.2.20",
     "lodash": "^4.17.21",
-    "mobx": "^6.6.0",
-    "mobx-react-lite": "^3.4.0",
-    "nanoid": "^3.3.4",
-    "tsd": "^0.20.0"
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
+    "nanoid": "^4.0.2",
+    "tsd": "^0.28.1"
   },
   "repository": {
     "type": "git",
