--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "type-fest": "^3.9.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.4",
-    "vitest": "^0.30.1"
+    "vitest": "^0.30.1",
+    "@vitejs/plugin-react-swc": "^3.3.0"
   },
   "dependencies": {
     "fp-ts": "^2.14.0",
