--- a/package.json
+++ b/package.json
@@ -41,32 +41,32 @@
     "react": ">=16"
   },
   "devDependencies": {
-    "@ladle/react": "^2.12.3",
-    "@types/lodash": "^4.14.194",
-    "@types/node": "^18.16.3",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
-    "antd": "^5.4.6",
+    "@ladle/react": "^2.17.2",
+    "@types/lodash": "^4.14.197",
+    "@types/node": "^20.4.10",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "antd": "^5.8.3",
     "classnames": "^2.3.2",
-    "concurrently": "^8.0.1",
-    "postcss": "^8.4.23",
+    "concurrently": "^8.2.0",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "ts-toolbelt": "9.6.0",
-    "tslib": "^2.5.0",
-    "type-fest": "^3.9.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.4",
-    "vitest": "^0.30.1",
-    "@vitejs/plugin-react-swc": "^3.3.0"
+    "tslib": "^2.6.1",
+    "type-fest": "^4.2.0",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.1"
   },
   "dependencies": {
-    "fp-ts": "^2.14.0",
+    "fp-ts": "^2.16.1",
     "io-ts": "^2.2.20",
     "lodash": "^4.17.21",
-    "mobx": "^6.9.0",
-    "mobx-react-lite": "^3.4.3",
+    "mobx": "^6.10.0",
+    "mobx-react-lite": "^4.0.3",
     "nanoid": "^4.0.2",
     "tsd": "^0.28.1"
   },
