--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
-    "antd": "^5.9.0",
     "classnames": "^2.3.2",
     "concurrently": "^8.2.1",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "tailwindcss": "^3.3.3",
     "ts-toolbelt": "9.6.0",
     "tslib": "^2.6.2",
     "type-fest": "^4.3.1",
@@ -62,7 +62,9 @@
     "vitest": "^0.34.4"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "fp-ts": "^2.16.1",
+    "framer-motion": "^10.16.4",
     "io-ts": "^2.2.20",
     "lodash": "^4.17.21",
     "mobx": "^6.10.2",
