--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
+    "@types/uuid": "^9.0.4",
     "@vitejs/plugin-react-swc": "^3.4.0",
     "classnames": "^2.3.2",
     "concurrently": "^8.2.1",
@@ -69,7 +70,8 @@
     "lodash": "^4.17.21",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
-    "tsd": "^0.29.0"
+    "tsd": "^0.29.0",
+    "uuid": "^9.0.1"
   },
   "repository": {
     "type": "git",
