--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vitest": "^0.34.6"
   },
   "dependencies": {
+    "@effect/data": "^0.18.7",
     "@nextui-org/react": "^2.1.13",
     "fp-ts": "^2.16.1",
     "framer-motion": "^10.16.4",
