--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "node": ">=12"
   },
   "prettier": {
-    "printWidth": 170,
+    "printWidth": 150,
     "semi": true,
     "singleQuote": true,
+    "jsxSingleQuote": true,
     "trailingComma": "none",
     "arrowParens": "avoid"
   },
